// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contract 'AssetTransitDesk' Snapshot scenarios Configuration scenario 1`] = `
Array [
  Object {
    "args": Array [
      "0xa49807205ce4d355092ef5a8a18f56e8913cf4a201fbe287825b095693c21775",
      "assetTransitDesk",
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "deployer",
    "contract": "LP",
    "customState": Object {
      "liquidityPool": "0x0000000000000000000000000000000000000000",
      "surplusTreasury": "0x0000000000000000000000000000000000000000",
    },
    "events": Array [
      Object {
        "args": Array [
          "0xa49807205ce4d355092ef5a8a18f56e8913cf4a201fbe287825b095693c21775",
          "assetTransitDesk",
          "deployer",
        ],
        "contract": "LP",
        "name": "RoleGranted",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "bytes32",
          "components": null,
          "indexed": undefined,
          "name": "role",
          "type": "bytes32",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "account",
          "type": "address",
        },
      ],
      "name": "grantRole",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      Array [
        "assetTransitDesk",
      ],
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "deployer",
    "contract": "LP",
    "customState": Object {
      "liquidityPool": "0x0000000000000000000000000000000000000000",
      "surplusTreasury": "0x0000000000000000000000000000000000000000",
    },
    "events": Array [],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": ParamType {
            "arrayChildren": null,
            "arrayLength": null,
            "baseType": "address",
            "components": null,
            "indexed": undefined,
            "name": "",
            "type": "address",
          },
          "arrayLength": -1,
          "baseType": "array",
          "components": null,
          "indexed": undefined,
          "name": "newWorkingTreasuries",
          "type": "address[]",
        },
      ],
      "name": "setWorkingTreasuries",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      "assetTransitDesk",
      10000n,
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "surplusTreasury",
    "contract": "BRLC",
    "customState": Object {
      "liquidityPool": "0x0000000000000000000000000000000000000000",
      "surplusTreasury": "0x0000000000000000000000000000000000000000",
    },
    "events": Array [
      Object {
        "args": Array [
          "surplusTreasury",
          "assetTransitDesk",
          10000n,
        ],
        "contract": "BRLC",
        "name": "Approval",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "spender",
          "type": "address",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "uint256",
          "components": null,
          "indexed": undefined,
          "name": "value",
          "type": "uint256",
        },
      ],
      "name": "approve",
      "outputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "bool",
          "components": null,
          "indexed": undefined,
          "name": "",
          "type": "bool",
        },
      ],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      "LP",
      10000n,
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "deployer",
    "contract": "assetTransitDesk",
    "customState": Object {
      "liquidityPool": "0x0000000000000000000000000000000000000000",
      "surplusTreasury": "0x0000000000000000000000000000000000000000",
    },
    "events": Array [
      Object {
        "args": Array [
          "assetTransitDesk",
          "LP",
          10000n,
        ],
        "contract": "BRLC",
        "name": "Approval",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "spender",
          "type": "address",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "uint256",
          "components": null,
          "indexed": undefined,
          "name": "amount",
          "type": "uint256",
        },
      ],
      "name": "approve",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      "LP",
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "deployer",
    "contract": "assetTransitDesk",
    "customState": Object {
      "liquidityPool": "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE",
      "surplusTreasury": "0x0000000000000000000000000000000000000000",
    },
    "events": Array [
      Object {
        "args": Array [
          "LP",
          "0x0000000000000000000000000000000000000000",
        ],
        "contract": "assetTransitDesk",
        "name": "LiquidityPoolChanged",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "newLiquidityPool",
          "type": "address",
        },
      ],
      "name": "setLiquidityPool",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      "surplusTreasury",
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 0n,
        "account": 0n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "surplusTreasury": 0n,
      },
    },
    "caller": "deployer",
    "contract": "assetTransitDesk",
    "customState": Object {
      "liquidityPool": "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE",
      "surplusTreasury": "0x90F79bf6EB2c4f870365E785982E1f101E93b906",
    },
    "events": Array [
      Object {
        "args": Array [
          "surplusTreasury",
          "0x0000000000000000000000000000000000000000",
        ],
        "contract": "assetTransitDesk",
        "name": "SurplusTreasuryChanged",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "newSurplusTreasury",
          "type": "address",
        },
      ],
      "name": "setSurplusTreasury",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
]
`;

exports[`Contract 'AssetTransitDesk' Snapshot scenarios Simple usage scenario 1`] = `
Array [
  Object {
    "args": Array [
      "0x6465706f7369742d696400000000000000000000000000000000000000000000",
      "account",
      100n,
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 10100n,
        "account": 9900n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "pauser": 0n,
        "stranger": 0n,
        "surplusTreasury": 10000n,
      },
    },
    "caller": "manager",
    "contract": "assetTransitDesk",
    "customState": Object {
      "issuanceOperation":  [
        1n,
        "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC",
        100n,
      ],
      "redemptionOperation":  [
        0n,
        "0x0000000000000000000000000000000000000000",
        0n,
        0n,
      ],
    },
    "events": Array [
      Object {
        "args": Array [
          "account",
          "assetTransitDesk",
          100n,
        ],
        "contract": "BRLC",
        "name": "Transfer",
      },
      Object {
        "args": Array [
          "assetTransitDesk",
          "LP",
          100n,
        ],
        "contract": "BRLC",
        "name": "Transfer",
      },
      Object {
        "args": Array [
          100n,
        ],
        "contract": "LP",
        "name": "Deposit",
      },
      Object {
        "args": Array [
          "0x6465706f7369742d696400000000000000000000000000000000000000000000",
          "account",
          100n,
        ],
        "contract": "assetTransitDesk",
        "name": "AssetDeposited",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "bytes32",
          "components": null,
          "indexed": undefined,
          "name": "assetDepositId",
          "type": "bytes32",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "buyer",
          "type": "address",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "uint64",
          "components": null,
          "indexed": undefined,
          "name": "principalAmount",
          "type": "uint64",
        },
      ],
      "name": "depositAsset",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
  Object {
    "args": Array [
      "0x726564656d7074696f6e2d696400000000000000000000000000000000000000",
      "account",
      100n,
      10n,
    ],
    "balances": Object {
      "BRLC": Object {
        "BRLC": 0n,
        "LP": 10000n,
        "account": 10010n,
        "assetTransitDesk": 0n,
        "deployer": 0n,
        "manager": 0n,
        "pauser": 0n,
        "stranger": 0n,
        "surplusTreasury": 9990n,
      },
    },
    "caller": "manager",
    "contract": "assetTransitDesk",
    "customState": Object {
      "issuanceOperation":  [
        1n,
        "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC",
        100n,
      ],
      "redemptionOperation":  [
        1n,
        "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC",
        100n,
        10n,
      ],
    },
    "events": Array [
      Object {
        "args": Array [
          "LP",
          "assetTransitDesk",
          100n,
        ],
        "contract": "BRLC",
        "name": "Transfer",
      },
      Object {
        "args": Array [
          100n,
          0n,
        ],
        "contract": "LP",
        "name": "Withdrawal",
      },
      Object {
        "args": Array [
          "surplusTreasury",
          "assetTransitDesk",
          10n,
        ],
        "contract": "BRLC",
        "name": "Transfer",
      },
      Object {
        "args": Array [
          "assetTransitDesk",
          "account",
          110n,
        ],
        "contract": "BRLC",
        "name": "Transfer",
      },
      Object {
        "args": Array [
          "0x726564656d7074696f6e2d696400000000000000000000000000000000000000",
          "account",
          100n,
          10n,
        ],
        "contract": "assetTransitDesk",
        "name": "AssetRedeemed",
      },
    ],
    "methodFragment": FunctionFragment {
      "constant": false,
      "gas": null,
      "inputs": Array [
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "bytes32",
          "components": null,
          "indexed": undefined,
          "name": "assetRedemptionId",
          "type": "bytes32",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "address",
          "components": null,
          "indexed": undefined,
          "name": "buyer",
          "type": "address",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "uint64",
          "components": null,
          "indexed": undefined,
          "name": "principalAmount",
          "type": "uint64",
        },
        ParamType {
          "arrayChildren": null,
          "arrayLength": null,
          "baseType": "uint64",
          "components": null,
          "indexed": undefined,
          "name": "netYieldAmount",
          "type": "uint64",
        },
      ],
      "name": "redeemAsset",
      "outputs": Array [],
      "payable": false,
      "stateMutability": "nonpayable",
      "type": "function",
    },
    "type": "methodCall",
  },
]
`;
